-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.12.0
-
None
-
3
-
9223372036854775807
I am seeing this assertion for some time now in racer. Current master-next included
[11774.957294] LustreError: 24329:0:(ldlm_lock.c:671:ldlm_add_bl_work_item()) ASSERTION( lock->l_blocking_lock == ((void *)0) ) failed: [11774.958961] LustreError: 24329:0:(ldlm_lock.c:671:ldlm_add_bl_work_item()) LBUG [11774.960198] Pid: 24329, comm: mdt02_001 3.10.0-7.5-debug #2 SMP Sat Jun 2 18:41:57 EDT 2018 [11774.962137] Call Trace: [11774.962722] [<ffffffffa01947dc>] libcfs_call_trace+0x8c/0xc0 [libcfs] [11774.963347] [<ffffffffa019488c>] lbug_with_loc+0x4c/0xa0 [libcfs] [11774.963951] [<ffffffffa05913d3>] ldlm_add_ast_work_item+0x333/0x410 [ptlrpc] [11774.964607] [<ffffffffa05c6465>] ldlm_inodebits_compat_queue+0x175/0x450 [ptlrpc] [11774.966929] [<ffffffffa05c682b>] ldlm_process_inodebits_lock+0xeb/0x3d0 [ptlrpc] [11774.968064] [<ffffffffa0595bad>] ldlm_lock_enqueue+0x29d/0xa30 [ptlrpc] [11774.968713] [<ffffffffa05af5e3>] ldlm_cli_enqueue_local+0x1c3/0x850 [ptlrpc] [11774.969339] [<ffffffffa0caf917>] mdt_object_local_lock+0x4e7/0xb20 [mdt] [11774.969971] [<ffffffffa0caffc0>] mdt_object_lock_internal+0x70/0x330 [mdt] [11774.970590] [<ffffffffa0cb02dc>] mdt_reint_object_lock+0x2c/0x60 [mdt] [11774.982218] [<ffffffffa0ccadc6>] mdt_attr_set+0xf6/0xba0 [mdt] [11774.982771] [<ffffffffa0ccc0c9>] mdt_reint_setattr+0x609/0xa80 [mdt] [11774.983309] [<ffffffffa0ccc5c0>] mdt_reint_rec+0x80/0x210 [mdt] [11774.984082] [<ffffffffa0cab7b2>] mdt_reint_internal+0x6b2/0xa50 [mdt] [11774.987423] [<ffffffffa0cb67f7>] mdt_reint+0x67/0x140 [mdt] [11774.988240] [<ffffffffa064a705>] tgt_request_handle+0xaf5/0x1590 [ptlrpc] [11774.988793] [<ffffffffa05eee26>] ptlrpc_server_handle_request+0x256/0xad0 [ptlrpc] [11774.989778] [<ffffffffa05f2c1e>] ptlrpc_main+0xabe/0x1f80 [ptlrpc] [11774.990265] [<ffffffff810ae864>] kthread+0xe4/0xf0 [11774.990743] [<ffffffff81783737>] ret_from_fork_nospec_end+0x0/0x39